// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`radioGroup组件 快照测试 基本使用 1`] = `
<div
  className="sc-bdVaJa RadioGroup__FormGroupWrapper-sc-12x31w9-0 bHapyR sinoui-radio-group"
>
  <label
    className="sc-htpNat sc-bxivhb fHLrts sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-bwzfXH eWTgta sinoui-base-button sc-ifAKCX etFyZv sinoui-radio"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="sc-EHOje bJVKMf sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="1"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框1
    </span>
  </label>
  <label
    className="sc-htpNat sc-bxivhb fHLrts sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-bwzfXH eWTgta sinoui-base-button sc-ifAKCX etFyZv sinoui-radio"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="sc-EHOje bJVKMf sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="2"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框2
    </span>
  </label>
  <label
    className="sc-htpNat sc-bxivhb fHLrts sinoui-form-control-label"
  >
    <span
      checked={true}
      className="sc-bwzfXH eWTgta sinoui-base-button sc-ifAKCX kdERet sinoui-radio sinoui-radio--checked"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={true}
        className="sc-EHOje bJVKMf sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="3"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框3
    </span>
  </label>
  <label
    className="sc-htpNat sc-bxivhb fHLrts sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-bwzfXH eWTgta sinoui-base-button sc-ifAKCX etFyZv sinoui-radio"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="sc-EHOje bJVKMf sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="4"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框4
    </span>
  </label>
</div>
`;

exports[`radioGroup组件 快照测试 设置只读 1`] = `
Array [
  <div
    className="sc-bdVaJa RadioGroup__FormGroupWrapper-sc-12x31w9-0 bHapyR sinoui-radio-group sinoui-radio-group--disabled"
  >
    <label
      className="sc-htpNat sc-bxivhb PGtII sinoui-form-control-label"
      disabled={true}
    >
      <span
        checked={false}
        className="sc-bwzfXH kSBXvR sinoui-base-button sc-ifAKCX etFyZv sinoui-radio sinoui-radio--disabled"
        color="primary"
        disabled={true}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-EHOje bJVKMf sinoui-radio__input"
          disabled={true}
          onChange={[Function]}
          type="radio"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框1
      </span>
    </label>
    <label
      className="sc-htpNat sc-bxivhb PGtII sinoui-form-control-label"
      disabled={true}
    >
      <span
        checked={false}
        className="sc-bwzfXH kSBXvR sinoui-base-button sc-ifAKCX etFyZv sinoui-radio sinoui-radio--disabled"
        color="primary"
        disabled={true}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-EHOje bJVKMf sinoui-radio__input"
          disabled={true}
          onChange={[Function]}
          type="radio"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框2
      </span>
    </label>
    <label
      className="sc-htpNat sc-bxivhb PGtII sinoui-form-control-label"
      disabled={true}
    >
      <span
        checked={false}
        className="sc-bwzfXH kSBXvR sinoui-base-button sc-ifAKCX etFyZv sinoui-radio sinoui-radio--disabled"
        color="primary"
        disabled={true}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-EHOje bJVKMf sinoui-radio__input"
          disabled={true}
          onChange={[Function]}
          type="radio"
          value="3"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框3
      </span>
    </label>
    <label
      className="sc-htpNat sc-bxivhb PGtII sinoui-form-control-label"
      disabled={true}
    >
      <span
        checked={false}
        className="sc-bwzfXH kSBXvR sinoui-base-button sc-ifAKCX etFyZv sinoui-radio sinoui-radio--disabled"
        color="primary"
        disabled={true}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-EHOje bJVKMf sinoui-radio__input"
          disabled={true}
          onChange={[Function]}
          type="radio"
          value="4"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框4
      </span>
    </label>
  </div>,
  <div
    className="sc-bdVaJa RadioGroup__FormGroupWrapper-sc-12x31w9-0 bHapyR sinoui-radio-group sinoui-radio-group--readOnly"
  >
    <label
      className="sc-htpNat sc-bxivhb PGtII sinoui-form-control-label"
      readOnly={true}
    >
      <span
        checked={false}
        className="sc-bwzfXH kSBXvR sinoui-base-button sc-ifAKCX etFyZv sinoui-radio sinoui-radio--readOnly"
        color="primary"
        disabled={true}
        onBlur={false}
        onFocus={false}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-EHOje bJVKMf sinoui-radio__input"
          onChange={[Function]}
          readOnly={true}
          type="radio"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框1
      </span>
    </label>
    <label
      className="sc-htpNat sc-bxivhb PGtII sinoui-form-control-label"
      readOnly={true}
    >
      <span
        checked={false}
        className="sc-bwzfXH kSBXvR sinoui-base-button sc-ifAKCX etFyZv sinoui-radio sinoui-radio--readOnly"
        color="primary"
        disabled={true}
        onBlur={false}
        onFocus={false}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-EHOje bJVKMf sinoui-radio__input"
          onChange={[Function]}
          readOnly={true}
          type="radio"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框2
      </span>
    </label>
    <label
      className="sc-htpNat sc-bxivhb PGtII sinoui-form-control-label"
      readOnly={true}
    >
      <span
        checked={false}
        className="sc-bwzfXH kSBXvR sinoui-base-button sc-ifAKCX etFyZv sinoui-radio sinoui-radio--readOnly"
        color="primary"
        disabled={true}
        onBlur={false}
        onFocus={false}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-EHOje bJVKMf sinoui-radio__input"
          onChange={[Function]}
          readOnly={true}
          type="radio"
          value="3"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框3
      </span>
    </label>
    <label
      className="sc-htpNat sc-bxivhb PGtII sinoui-form-control-label"
      readOnly={true}
    >
      <span
        checked={false}
        className="sc-bwzfXH kSBXvR sinoui-base-button sc-ifAKCX etFyZv sinoui-radio sinoui-radio--readOnly"
        color="primary"
        disabled={true}
        onBlur={false}
        onFocus={false}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-EHOje bJVKMf sinoui-radio__input"
          onChange={[Function]}
          readOnly={true}
          type="radio"
          value="4"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框4
      </span>
    </label>
  </div>,
]
`;

exports[`radioGroup组件 快照测试 设置标题显示位置 1`] = `
Array [
  <div
    className="sc-bdVaJa RadioGroup__FormGroupWrapper-sc-12x31w9-0 bHapyR sinoui-radio-group"
  >
    <label
      className="sc-htpNat sc-bxivhb fHLrts sinoui-form-control-label"
    >
      <span
        checked={false}
        className="sc-bwzfXH eWTgta sinoui-base-button sc-ifAKCX etFyZv sinoui-radio"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-EHOje bJVKMf sinoui-radio__input"
          onChange={[Function]}
          type="radio"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框1
      </span>
    </label>
    <label
      className="sc-htpNat sc-bxivhb fHLrts sinoui-form-control-label"
    >
      <span
        checked={false}
        className="sc-bwzfXH eWTgta sinoui-base-button sc-ifAKCX etFyZv sinoui-radio"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-EHOje bJVKMf sinoui-radio__input"
          onChange={[Function]}
          type="radio"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框2
      </span>
    </label>
    <label
      className="sc-htpNat sc-bxivhb fHLrts sinoui-form-control-label"
    >
      <span
        checked={false}
        className="sc-bwzfXH eWTgta sinoui-base-button sc-ifAKCX etFyZv sinoui-radio"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-EHOje bJVKMf sinoui-radio__input"
          onChange={[Function]}
          type="radio"
          value="3"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框3
      </span>
    </label>
  </div>,
  <div
    className="sc-bdVaJa RadioGroup__FormGroupWrapper-sc-12x31w9-0 bHapyR sinoui-radio-group"
  >
    <label
      className="sc-htpNat sc-bxivhb ikFSdB sinoui-form-control-label"
    >
      <span
        checked={false}
        className="sc-bwzfXH eWTgta sinoui-base-button sc-ifAKCX etFyZv sinoui-radio"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-EHOje bJVKMf sinoui-radio__input"
          onChange={[Function]}
          type="radio"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框1
      </span>
    </label>
    <label
      className="sc-htpNat sc-bxivhb ikFSdB sinoui-form-control-label"
    >
      <span
        checked={false}
        className="sc-bwzfXH eWTgta sinoui-base-button sc-ifAKCX etFyZv sinoui-radio"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-EHOje bJVKMf sinoui-radio__input"
          onChange={[Function]}
          type="radio"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框2
      </span>
    </label>
    <label
      className="sc-htpNat sc-bxivhb ikFSdB sinoui-form-control-label"
    >
      <span
        checked={false}
        className="sc-bwzfXH eWTgta sinoui-base-button sc-ifAKCX etFyZv sinoui-radio"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="sc-EHOje bJVKMf sinoui-radio__input"
          onChange={[Function]}
          type="radio"
          value="3"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框3
      </span>
    </label>
  </div>,
]
`;

exports[`radioGroup组件 快照测试 设置纵向排列 1`] = `
<div
  className="sc-bdVaJa RadioGroup__FormGroupWrapper-sc-12x31w9-0 eKtGPU sinoui-radio-group sinoui-radio-group--block"
>
  <label
    className="sc-htpNat sc-bxivhb fHLrts sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-bwzfXH eWTgta sinoui-base-button sc-ifAKCX etFyZv sinoui-radio"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="sc-EHOje bJVKMf sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="1"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框1
    </span>
  </label>
  <label
    className="sc-htpNat sc-bxivhb fHLrts sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-bwzfXH eWTgta sinoui-base-button sc-ifAKCX etFyZv sinoui-radio"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="sc-EHOje bJVKMf sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="2"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框2
    </span>
  </label>
  <label
    className="sc-htpNat sc-bxivhb fHLrts sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-bwzfXH eWTgta sinoui-base-button sc-ifAKCX etFyZv sinoui-radio"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="sc-EHOje bJVKMf sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="3"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框3
    </span>
  </label>
  <label
    className="sc-htpNat sc-bxivhb fHLrts sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-bwzfXH eWTgta sinoui-base-button sc-ifAKCX etFyZv sinoui-radio"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 fCQqNT sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="sc-EHOje bJVKMf sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="4"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框4
    </span>
  </label>
</div>
`;
